# fast-pdf-parser

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  MUPDF_PARALLEL_SNIPPETS.md  Makefile  ONBOARDING.md  README.md  binding.gyp  chunk_test_summary.md  conanfile.py  conanfile.txt  example.js  index.js  package-lock.json  package.json  test_batch.sh
.github/workflows/: ci.yml  prebuild.yml  publish.yml
benchmark/: benchmark.cpp
benchmarks/: README.md  benchmark_passes.cpp
examples/: tokenizer_example.cpp
include/fast_pdf_parser/: fast_pdf_parser.h  hierarchical_chunker.h  json_serializer.h  json_types.h  text_extractor.h  thread_pool.h  tiktoken_tokenizer.h
lib/: index.d.ts
src/: README.md  batch_processor.cpp  binding.cc  chunk_pdf_cli.cpp  cl100k_base_data.cpp  docling_compatible.cpp  fast_output_test.cpp  fast_pdf_parser.cpp  hierarchical_chunker.cpp  hierarchical_docling.cpp  hierarchical_enhanced.cpp  hierarchical_final.cpp  hierarchical_refactored.cpp  json_serializer.cpp  limited_test.cpp  main.cpp  perf_test.cpp  simple_hierarchical.cpp  simple_test.cpp  stream_test.cpp  test_runner.cpp  text_extractor.cpp  thread_pool.cpp  token_test.cpp
test/: benchmark.js  test.js
test_pdfs/: TEST_RESULTS.md
tests/: CMakeLists.txt  README.md  perf_test.cpp  test_json_serializer.cpp  test_parser.cpp  test_thread_pool.cpp
